--- a/index.html
+++ b/index.html
@@ -3,40 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Portfolio</title>
+    <title>Student Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <h1>Your Student Number</h1>
-      <h2>Your Name</h2>
-      <p><a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      <h1>John Smith</h1>
+      <p>Student Number: #123456789</p>
+      <p>Email: john.smith@example.com</p>
     </header>
 
-    <main>
-      <section class="about">
-        <img src="yourphoto.jpg" alt="Your Photo" class="bio-image" />
-        <h3>About Me</h3>
-        <p>Your brief summary and work experience.</p>
-        <h3>My Country</h3>
-        <p>A brief paragraph about your country.</p>
-        <video controls>
-          <source src="yourvideo.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-      </section>
-    </main>
+    <section class="bio">
+      <img
+        src="https://rishi-patel.netlify.app/static/media/avatar.8c0a91f6bdf8b24f6ba2.png"
+        alt="Your Style"
+        class="bio-photo"
+      />
+      <h2>About Me</h2>
+      <p>
+        I am a dedicated student with a passion for technology and innovation.
+        With experience in several projects, I am continuously expanding my
+        skills in software development.
+      </p>
+    </section>
 
-    <aside>
-      <h3>Skills</h3>
+    <section class="country">
+      <h2>My Country</h2>
+      <p>
+        I am from Canada, a country known for its diversity, beautiful
+        landscapes, and progressive technology scene.
+      </p>
+    </section>
+
+    <section class="video">
+      <h2>Interesting Video</h2>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/IgAnj6r1O48?si=qvUbOMTDimNI1Nux"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </section>
+
+    <section class="skills">
+      <h2>Skills & Technologies</h2>
       <ul>
-        <li>Technology 1</li>
-        <li>Technology 2</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>HTML & CSS</li>
+        <!-- Add more skills as needed -->
       </ul>
-    </aside>
+    </section>
 
     <footer>
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
+      <p>Thank you for visiting my portfolio. Feel free to connect with me!</p>
     </footer>
   </body>
 </html>
