--- a/index.html
+++ b/index.html
@@ -8,55 +8,76 @@
   </head>
   <body>
     <header>
-      <h1>John Smith</h1>
-      <p>Student Number: #123456789</p>
-      <p>Email: john.smith@example.com</p>
+      <h1>Rishabh Gupta</h1>
+      <p>Student Number: 8894830</p>
+      <p>Email: rgupta4830@conestogac.on.ca</p>
     </header>
 
-    <section class="bio">
-      <img
-        src="https://rishi-patel.netlify.app/static/media/avatar.8c0a91f6bdf8b24f6ba2.png"
-        alt="Your Style"
-        class="bio-photo"
-      />
-      <h2>About Me</h2>
-      <p>
-        I am a dedicated student with a passion for technology and innovation.
-        With experience in several projects, I am continuously expanding my
-        skills in software development.
-      </p>
-    </section>
+    <div class="main">
+      <section class="skills">
+        <h2>Skills & Technologies</h2>
+        <ul>
+          <li>JavaScript</li>
+          <li>Java</li>
+          <li>HTML & CSS</li>
+          <li>MySQL</li>
+          <!-- Add more skills as needed -->
+        </ul>
+      </section>
+      <div>
+        <section class="bio">
+          <img src="/rishabh.jpeg" alt="Your Style" class="bio-photo" />
+          <h2>About Me</h2>
+          <p>
+            I am a dedicated student with a passion for technology and
+            innovation currently pursuing post-graduation in Reporting system
+            and databse development at Conestoga College, Kitchener, after
+            completing my graduation in Computer Application from the Institute
+            of Management Studies, Noida. I am skilled in communication,
+            teamwork, reliability, organization, hard work, and quick learning.
+            I have experience working as a Team Member at A&W Co., a Restaurant
+            Supervisor at Santushti Hospitality Services, and a Host at The Café
+            37, showcasing my commitment to quality service and team leadership.
+            I am continuously expanding my skills in software development.
+          </p>
+        </section>
 
-    <section class="country">
-      <h2>My Country</h2>
-      <p>
-        I am from Canada, a country known for its diversity, beautiful
-        landscapes, and progressive technology scene.
-      </p>
-    </section>
+        <section class="country">
+          <h2>My Country</h2>
+          <p>
+            My home country India, often hailed as the land of diversity and
+            vibrancy, stands as a testament to a rich cultural heritage and
+            historical depth that dates back thousands of years. This South
+            Asian gem is the world's largest democracy, where multiple
+            languages, religions, and traditions coexist in harmony, showcasing
+            an incredible unity in diversity. India's landscapes are just as
+            varied as its cultural spectrum, featuring snow-capped Himalayan
+            peaks in the north, sun-drenched beaches along the coastline, lush
+            green forests, and the expansive Thar Desert. Its culinary diversity
+            is renowned globally, offering a plethora of flavors that cater to
+            every palate. India has made significant strides in various sectors,
+            including technology, space research, and medicine, marking its
+            presence on the global stage. Celebrated for its festivals, art, and
+            architecture, India continues to enchant the world with its enduring
+            legacy and evolving modernity, making it a country that proudly
+            wears its past as it strides into the future.
+          </p>
+        </section>
 
-    <section class="video">
-      <h2>Interesting Video</h2>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/IgAnj6r1O48?si=qvUbOMTDimNI1Nux"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-    </section>
-
-    <section class="skills">
-      <h2>Skills & Technologies</h2>
-      <ul>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>HTML & CSS</li>
-        <!-- Add more skills as needed -->
-      </ul>
-    </section>
+        <section class="video">
+          <h2>Interesting Video about my country</h2>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/IgAnj6r1O48?si=qvUbOMTDimNI1Nux"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </section>
+      </div>
+    </div>
 
     <footer>
       <p>Thank you for visiting my portfolio. Feel free to connect with me!</p>
