--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
             I am continuously expanding my skills in software development.
           </p>
         </section>
+        <section class="job-experience">
+          <h2>Job Experience</h2>
+          <div class="job">
+            <h3>Senior Web Developer</h3>
+            <p><strong>Company:</strong> Tech Innovations Inc.</p>
+            <p><strong>Duration:</strong> June 2022 - Present</p>
+            <p>
+              <strong>Description:</strong> Lead the development of
+              client-facing web applications, focusing on creating responsive
+              and accessible UI/UX. Implemented modern JavaScript frameworks to
+              improve application performance and scalability.
+            </p>
+          </div>
+          <div class="job">
+            <h3>Junior Web Developer</h3>
+            <p><strong>Company:</strong> Startup Web Solutions</p>
+            <p><strong>Duration:</strong> January 2020 - May 2022</p>
+            <p>
+              <strong>Description:</strong> Supported the development of web
+              applications from concept through deployment, specializing in
+              front-end technologies. Collaborated on cross-functional teams to
+              meet tight deadlines.
+            </p>
+          </div>
+          <!-- Add more job entries as needed -->
+        </section>
 
         <section class="country">
           <h2>My Country</h2>
@@ -80,7 +106,7 @@
     </div>
 
     <footer>
-      <p>Thank you for visiting my portfolio. Feel free to connect with me!</p>
+      <p>Copyright © 2024, Rishabh Gupta. All rights reserved.</p>
     </footer>
   </body>
 </html>
