--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student Portfolio</title>
+    <title>Rishabh Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -43,21 +43,11 @@
         </section>
         <section class="job-experience">
           <h2>Job Experience</h2>
-          <div class="job">
-            <h3>Senior Web Developer</h3>
-            <p><strong>Company:</strong> Tech Innovations Inc.</p>
-            <p><strong>Duration:</strong> June 2022 - Present</p>
-            <p>
-              <strong>Description:</strong> Lead the development of
-              client-facing web applications, focusing on creating responsive
-              and accessible UI/UX. Implemented modern JavaScript frameworks to
-              improve application performance and scalability.
-            </p>
-          </div>
+
           <div class="job">
             <h3>Junior Web Developer</h3>
             <p><strong>Company:</strong> Startup Web Solutions</p>
-            <p><strong>Duration:</strong> January 2020 - May 2022</p>
+            <p><strong>Duration:</strong> January 2023 - March 2023</p>
             <p>
               <strong>Description:</strong> Supported the development of web
               applications from concept through deployment, specializing in
@@ -65,7 +55,22 @@
               meet tight deadlines.
             </p>
           </div>
-          <!-- Add more job entries as needed -->
+          <div class="job">
+            <h3>Restaurant Supervisor</h3>
+            <p>
+              <strong>Company:</strong> Santushti Hospitality Services (Indore,
+              India)
+            </p>
+            <p><strong>Duration:</strong> December 2021 - January 2023</p>
+            <p>
+              <strong>Description:</strong> Oversaw a team of 15, ensuring
+              top-notch selection, training, and supervision while managing
+              inventory and fostering positive customer interactions to enhance
+              service quality and company morale. Additionally, handled cash
+              register operations and actively promoted a welcoming environment,
+              ensuring exceptional dining experiences.
+            </p>
+          </div>
         </section>
 
         <section class="country">
