--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <div>
         <section class="bio">
-          <img src="/rishabh.jpeg" alt="Your Style" class="bio-photo" />
+          <img src="rishabh.jpeg" alt="Your Style" class="bio-photo" />
           <h2>About Me</h2>
           <p>
             I am a dedicated student with a passion for technology and
